--- a/style.css
+++ b/style.css
@@ -62,10 +62,6 @@ header {
 }
 /* Navbar Styles End */
 /* Banner Styles Start*/
-/* section{
-    height: 460px;
-    border: 2px solid black;
-} */
 .banner{
     height: 460px;
     margin: 110px auto;
@@ -123,4 +119,18 @@ header {
     margin-right: 10px;
    }
    /* Navbar Styles End */
+   /* Banner Styles Start*/
+   .banner{
+    display: grid;
+    grid-template-areas: 
+    "banner-img"
+    "banner-content";
+   }
+   .banner-content{
+    margin: 28px 16px 65px 16px;
+   }
+   .banner-content p{
+    margin top: 13px;
+   }
+   /* Banner Styles End*/
 }
