--- a/style.css
+++ b/style.css
@@ -19,6 +19,14 @@
   font-optical-sizing: auto;
   font-style: normal;
 }
+.btn-primary {
+    background-color: #E95A08;
+    color: white;
+    font-size: 1rem;
+    font-weight: 400;
+    width: 17rem;
+    height: 3.13rem;
+}
 /* Header section */
 
 /* Navbar Styles Start*/
@@ -81,6 +89,7 @@ header {
 .banner-content p {
     font-weight: normal;
     font-size: 1.38rem;  
+    color: rgba(0, 0, 0, 50%);
 }
 .banner-img {
     grid-area: banner-img;
@@ -88,9 +97,80 @@ header {
    align-self: self-end;
 
 }
-
-
 /* Banner Styles End*/
+/* Plant styles start */
+.plants{
+    margin: auto 150px;
+
+}
+.plant-content {
+    text-align: center;
+}
+.plants h1 {
+    font-size: 3.13rem;
+    font-weight: bold;
+}
+.plants p {
+    font-weight: normal;
+    font-size: 1.38rem;  
+    color: rgba(0, 0, 0, 50%);
+    margin-top: 16px;
+    margin-bottom: 50px;
+}
+.plant-card{
+    display: grid;
+    grid-template-areas:
+    "card-1 card-2 card-3 card-4" 
+    "card-5 card-6 card-7 card-8";
+    gap: 30px;
+}
+.card {
+    height:auto ;
+    width: 17rem;
+    grid-area: card-1;
+}
+.card-1 {
+    grid-area: card-1;
+}
+.card-2 {
+    grid-area: card-2;
+}
+.card-3 {
+    grid-area: card-3;
+}
+.card-4 {
+    grid-area: card-4;
+}
+.card-5 {
+    grid-area: card-5;
+}
+.card-6 {
+    grid-area: card-6;
+}
+.card-7 {
+    grid-area: card-7;
+}
+.card-8 {
+    grid-area: card-8;
+}
+.card-img {
+    margin-bottom: 30px;
+}
+.card-detailes {
+    text-align: center;
+    
+}
+.card-detailes h6 {
+    font-size: 1.4rem;
+    font-weight: 400;
+}
+.card-detailes h5 {
+    font-size: 1.4rem;
+    font-weight: 700; 
+    margin: 20px auto 30px;
+}
+
+/* Plant styler end */
 
 @media screen and (max-width: 640px) {
    /* Navbar Styles */
@@ -103,9 +183,9 @@ header {
     align-items: center;
    }
     .logo img {
-        max-width:50%;
-        height: auto;
-        display: block;
+    max-width:50%;
+    height: auto;
+    display: block;
 
     }
    .Home , .Shop , .About-us {
@@ -130,7 +210,22 @@ header {
     margin: 28px 16px 65px 16px;
    }
    .banner-content p{
-    margin top: 13px;
+    margin-top: 13px;
    }
    /* Banner Styles End*/
+   /* Plant styles start */
+   .plants{
+    margin: 200px 16px 28px;
+   }
+   .plant-card{
+    display: grid;
+    grid-template-areas:
+    "card-1 card-2"
+    "card-3 card-4" 
+    "card-5 card-6"
+    "card-7 card-8";
+    gap: 30px;
+}
+    /* Plant styler end */
+
 }
