--- a/style.css
+++ b/style.css
@@ -267,6 +267,46 @@ input {
 }
 /* Join section end */
 
+/* Footer styles start */
+.footer-section {
+    margin: 50px 160px;
+    height: 248px;
+    color: #6B7280;
+    display: flex;
+    justify-content: space-between;
+    text-align: start;
+}
+
+.footer-content .logo {
+    max-width: 120px;
+  margin-bottom: 15px;
+}
+.footer-content p {
+    font-size: 1.375rem;
+}
+.footer-links ul li {
+    list-style: none;
+    margin: 32px;
+    margin-top: 0px;
+}
+.footer-section a {
+    text-decoration: none;
+    color: #6B7280;
+    
+}
+.footer-social {
+     display: flex;
+    align-items: flex-start;
+    gap: 24px;
+}
+.footer-social img {
+    width: 36px;
+   height: 36px;
+   object-fit: contain;
+}
+
+/* Footer styles end */
+
 @media screen and (max-width: 640px) {
    /* Navbar Styles */
     header {
@@ -337,5 +377,12 @@ input {
         display: none;
     }
     /* Plant lover styles end */
+    /* Footer styles start */
+    .footer-section {
+        margin: 50px 20px;
+        flex-direction: column;
+        gap: 20px;
+    }
+    /* Footer styles end */
 
 }
